unit_3/css/style.css
@import <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">

nav {
	margin: 0;
  	padding: 0;
}

#hero{
	width: 100%;
	background: linear-gradient(rgba(198,91,43,0.3),rgba(198,91,43,0.3)),url(https://scontent-sjc3-1.cdninstagram.com/vp/309b0203824ee86decb57d472f656b03/5C52A0DA/t51.2885-15/e35/14145606_295898824107437_470656124_n.jpg) no-repeat;
	background-size: cover;
	background-position: center top;
	text-align: right;
	font-weight: bold;
	height: 450px;
	margin: 0;
	padding: 0;
}

ul {
	list-style: none;

}

#mainmenu {
	font-family: 'Acme', Arial, sans serif;
	color: #FFC435;
	text-align: right;
	margin: 0px;
	padding: 20px;
}

#mainmenu li {
	font-family: 'Acme', Arial, sans serif;
	color: #FFC435;
	display: inline;
	padding: 20px;
	margin: 0px;
}

#mainmenu li a{
	font-family: 'Acme', Arial, sans serif;
	color: #FFC435;
}

#heroname{
	font-family: 'Acme', Arial, sans serif;
	color: #FFC435;
	padding: 50px;
}

h1 {
	text-align: center;
	font-weight:400;
}

h2 {
	text-align: center;
	font-weight: 300;
}

#slogan {
	font-family: 'Acme', Arial, sans serif;
	font-style: italic;
	color: #fff;
}

#litter_pick {
	background-color: #fff;
	width: 100%;
	padding: 10px;
	text-align: center;
}

#litter {
	text-align: center;
}

.orphans {
	width: 200px;
	height: 200px;
	background-color: #000;
	background-position: center;
	margin: 10px;
}

#second_steve {
	background: url(https://scontent-sjc3-1.cdninstagram.com/vp/309b0203824ee86decb57d472f656b03/5C52A0DA/t51.2885-15/e35/14145606_295898824107437_470656124_n.jpg) no-repeat;
	background-size: cover;
}

hr {
	width: 250px;

}

img {
	height: 40%;
}

h3 {
	color: #FFC435;
	text-align: center;
	font-size: 22px;
	font-weight: 400;
}

.justify {
	font-family: 'Acme', Arial, sans serif;
	color: #FFC435;
	text-align: justify;
	color: #7B7C94;
	font-size: 18px;
	margin: 0 20px 0 20px;
}

#list {
	font-family: 'Acme', Arial, sans serif;
	color: #FFC435;
	text-align:left;
}

li {
	font-family: 'Acme', Arial, sans serif;
	color: #7B7C94;
	font-size: 18px;
}

a {
	font-family: 'Acme', Arial, sans serif;
	color: #FF96B8;
}

